fix right quote spacing

--- a/home.css
+++ b/home.css
@@ -112,8 +112,7 @@ a:visited {
 }
 
 .quote-r {
-    /*width: 30px;*/
-    width: auto;
+    width: 30px;
     text-align: center;
     float: left;
 }
